--- a/test/release/examples/hpcc/README
+++ b/test/release/examples/hpcc/README
@@ -6,9 +6,9 @@ This directory contains Chapel versions of three HPC Challenge
 benchmarks (http://icl.cs.utk.edu/hpcc/) and a Makefile to help build
 them.  These codes were originally based on our entries for the 2006
 HPC Challenge Award Competition for class 2 ("most productivity"), but
-have evolved significantly since then.  For a detailed explanation of
-these benchmarks, please refer to hpccTutorial.pdf in the doc/
-directory.
+have continued to evolve since then.  For a detailed explanation of
+these benchmarks, please refer to the hpccOverview.pdf and
+hpccTutorial.pdf papers in the doc/ directory.
 
 The main files for these benchmarks are as follows:
 
@@ -28,12 +28,13 @@ These benchmarks can be compiled using the following commands:
      chpl -o fft probSize.chpl fft.chpl
 
 Or using the provided Makefile (which also turns on optimizations and
-turns off bounds checks).  To make the tests individually use:
+turns off runtime correctness checks).  To make the tests individually
+use:
 
-    make stream
-    make ra
-    make fft
+    gmake stream
+    gmake ra
+    gmake fft
 
 To make them all, use:
 
-    make all
+    gmake all
