Just realized that I never took my pass on README.chplenv, so did that now.
Added mention of the different Cray platforms we have been
targeting to the README.chplenv file.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12850 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/CHANGES
+++ b/CHANGES
@@ -73,6 +73,7 @@ Newly Implemented Features:
 Portability of code base:
 -------------------------
 - added support for compiling with Intel, PGI, Pathscale, and Cray compilers
+- added initial support for compiling for Cray MTA/XMT, X1s, and XTs
 - improved portability of source and generated codes across compilers/platforms
 - refactored Makefiles to better separate compiler settings from platforms
 - added support for cross-compilation environments -- see doc/README.chplenv
