Update the prodCons test to use the convention that sync variables names end with a dollar sign.
Add "syncvar$" as an example of a legal identifier in the spec.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12855 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Lexical_Structure.tex
+++ b/spec/Lexical_Structure.tex
@@ -78,7 +78,7 @@ such variables could result in deadlocks.
 \begin{example}
 The following are legal identifiers:
 \begin{chapel}
-  x, x1e, xt3, legalChapelIdentifier, legal_chapel_identifier
+  x, x1e, xt3, syncvar$\mbox{{\bf \$}}$, legalChapelIdentifier, legal_chapel_identifier
 \end{chapel}
 \end{example}
 
