--- a/spec/Statements.tex
+++ b/spec/Statements.tex
@@ -467,11 +467,16 @@ module-name:
   module-name . module-name
 \end{syntax}
 The use statement makes symbols in each listed module's scope available
-in the scope where the use statement occurs.
+from the scope where the use statement occurs.
 
-It is an error for a variable, type or module to be defined both by a
-\chpl{use} statement and by a declaration in the same scope.
-Functions may be overloaded in this way.
+Symbols injected by a use statement are at an outer scope from those
+defined directly in the scope where the use statement occurs, but at a
+nearer scope than symbols defined in the scope containing the scope where
+the use statement occurs.
+
+If used modules themselves use other modules, symbols are scoped according
+the depth of use statements followed to find them. It is an error for two
+variables, types, or modules to be defined at the same depth.
 
 \subsection{The Type Select Statement}
 \label{The_Type_Select_Statement}
