Added some more pointers in the top-level README based on David's feedback.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12860 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/README
+++ b/README
@@ -74,4 +74,6 @@ For more detailed information about...      refer to...
   ...a quick reference for Chapel syntax     ...doc/quickReference.pdf
   ...a tutorial using three HPCC benchmarks  ...doc/hpccTutorial.pdf
   ...the Chapel language specification       ...doc/chapelLanguageSpec.pdf
+  ...setting up Chapel for cross-compilation ...doc/README.chplenv
+  ...using non-default C/C++ compilers, make ...doc/README.chplenv
   ...notes for Cygwin users                  ...doc/README.cygwin
