--- a/doc/release/README
+++ b/doc/release/README
@@ -10,6 +10,7 @@ This directory contains the following documentation:
   README.compiling : how to use the Chapel compiler to compile code
   README.cygwin    : notes for Cygwin users
   README.executing : execution options for Chapel programs
+  README.extern    : technical note on interfacing with external C routines
   README.prereqs   : prerequisites for using Chapel
 
   chapelLanguageSpec.pdf : the current draft of the Chapel language
