Add "enumerated" as a generic type a function can be instantiated for. Added it next to integral and numeric.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12889 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Generics.tex
+++ b/spec/Generics.tex
@@ -162,9 +162,11 @@ symbol \chpl{type} is equivalent to \chpl{s.itemType}.
 
 \index{integral@\chpl{integral}}
 \index{numeric@\chpl{numeric}}
-The generic types \chpl{integral} and \chpl{numeric} are generic types
-that can only be instantiated with, respectively, the signed and
-unsigned integral types and all of the numeric types.
+\index{enumerated@\chpl{enumerated}}
+The generic types \chpl{integral}, \chpl{numeric} and \chpl{enumerated}
+are generic types that can only be instantiated with, respectively, the
+signed and unsigned integral types, all of the numeric types, and
+enumerated types.
 
 \subsubsection{Formal Arguments of Generic Array Types}
 \label{Formal_Arguments_of_Generic_Array_Types}
