--- a/README
+++ b/README
@@ -77,4 +77,5 @@ For more detailed information about...      refer to...
   ...setting up Chapel for cross-compilation ...doc/README.chplenv
   ...using non-default C/C++ compilers, make ...doc/README.chplenv
   ...calling C routines from Chapel          ...doc/README.extern
+  ...formatting value-to-string conversions  ...doc/README.format
   ...notes for Cygwin users                  ...doc/README.cygwin
