--- a/doc/release/README
+++ b/doc/release/README
@@ -11,6 +11,7 @@ This directory contains the following documentation:
   README.cygwin    : notes for Cygwin users
   README.executing : execution options for Chapel programs
   README.extern    : technical note on interfacing with external C routines
+  README.foramt    : technical note on controlling value-to-string formatting
   README.prereqs   : prerequisites for using Chapel
 
   chapelLanguageSpec.pdf : the current draft of the Chapel language
